# Phonic-AI-Interview-Agent

./: .gitignore  README.md  design_guidelines.json
backend/: .env  .env.example  pyproject.toml  requirements.txt  server.py
backend/db/: mongo.py
backend/models/: interview_session.py
backend/pipeline/: interview_pipeline.py
backend/routers/: auth.py  evaluations.py  interviews.py  jd.py  resume.py  settings.py  webhooks.py
backend/services/: cartesia_voices.py  conversation_state.py  evaluation.py  jd_parser.py  llm_provider.py  prompt_builder.py  resume_parser.py
backend/tests/: test_phonic_api.py
frontend/: .env  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Layout.js
frontend/src/contexts/: AuthContext.js  ThemeContext.js
frontend/src/lib/: api.js  ws.js
frontend/src/pages/: Dashboard.js  EvaluationReport.js  InterviewDetail.js  InterviewRoom.js  InterviewsList.js  JDLibrary.js  Login.js  NewInterview.js  Settings.js
memory/: PRD.md
test_reports/: iteration_1.json
test_reports/pytest/: pytest_results.xml
