[project]
name = "phonic-interview-agent"
version = "0.1.0"
description = "Phonic AI Interview Agent Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "anthropic>=0.85.0",
    "deepgram-sdk>=6.0.1",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "motor>=3.3.1",
    "ollama>=0.6.1",
    "openai>=1.99.9",
    "bcrypt>=4.0.0",
    "pipecat-ai>=0.0.105",
    "pymongo>=4.5.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "websockets>=15.0.1",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
